import("//mojo/public/tools/bindings/mojom.gni")
mojom("mojom") {
  sources = [ "pingable.mojom" ]
}

executable("browser") {
  sources = [
    "pingable.cc",
    "pingable.h",
    "browser.cc",
    "helper.h",
  ]
  deps = [
    "//base",
    "//mojo/public/cpp/bindings:bindings",
    "//mojo/core/embedder",
    ":mojom",
  ]  
}

executable("renderer") {
   sources = [
    "pingable.cc",
    "pingable.h",
    "renderer.cc",
    "helper.h",
  ]
  deps = [
    "//base",
    "//mojo/public/cpp/bindings:bindings",
    "//mojo/core/embedder",
    ":mojom",
  ]  
 
}